make header and footer fixed, add z-index to each sector, and begin tailoring for view

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,18 @@ html, body{
     padding: 0;
     margin: 0;
 }
+#home, #services, #contact, #story{
+    position: fixed;
+    z-index: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    padding-bottom: 98px;
+    padding-top: 81px;
+    background: black;
+}
 .container-fluid{
     padding: 0;
 }
@@ -27,9 +39,8 @@ html, body{
     margin: auto;
 }
 .logo{
-    max-width: 100%;
     display: inline-block;
-    width: 38%;
+    width: 30%;
     padding: 22px;
 }
 .contact{
@@ -64,9 +75,6 @@ li.nav{
     color: white;
     font-size: 12px;
     font-weight: bolder;
-}
-.btn.active{
-
 }
 .btn:hover{
     color: white;
@@ -145,12 +153,8 @@ li.nav{
     padding-top: -20px;
     margin: 0 auto;
 }
-.story-content{
-    font-size: 1.25em;
-    padding: 20px
-    color: white;
-    text-align: center;
-}
+
+
 .contact-header{
     margin-left: 40%;
     padding-top: 25px;
@@ -197,29 +201,30 @@ li.nav{
     max-width: 1200px;
     margin: auto;
 }
-
-.content{
-    padding: 14px;
+.story-content{
+    font-size: 1.25em;
+    padding: 35px
+    color: white;
+    text-align: center;
 }
 .story-content{
     color: white;
     font-size: 15px;
     -webkit-column-count: 3;
     text-align: left;
-    margin: 15px;
 }
-#story{
-    position: relative;
-    z-index: 0;
-}
-.footer-content{
+.footer-cars{
     margin: auto;
     display: block;
-
+    width: 50%;
 }
 .footer{
-    background-color: black;
-
+    margin: 8px auto;
+}
+.footer-content{
+    text-align: center;
+    font-size: 10px;
+    margin-top: 15px;
 }
 #footer{
     position: fixed;
@@ -227,4 +232,5 @@ li.nav{
     bottom: 0;
     left: 0;
     width: 100%;
+    background-color: black;
 }
